--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -16,25 +16,26 @@
       <div class="hidden md:flex items-center space-x-1">
         <a 
           href="/courses" 
-          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange transition-colors duration-200 rounded-lg hover:bg-white/5"
+          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange "
         >
           Cursos
         </a>
         <a 
           href="/dashboard" 
-          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange transition-colors duration-200 rounded-lg hover:bg-white/5"
+          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange"
         >
           Dashboard
         </a>
         <a 
           href="/profile" 
-          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange transition-colors duration-200 rounded-lg hover:bg-white/5"
+          class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange"
         >
           Perfil
         </a>
         <a 
           href="/login" 
-          class="ml-4 px-4 py-2 text-sm font-medium text-White bg-Orange/90 hover:bg-Orange rounded-lg transition-all duration-200 hover:shadow-lg hover:shadow-Orange/20"
+          class="ml-4 px-4 py-2 text-sm font-medium text-White bg-Orange/90 hover:bg-Orange rounded-lg 
+                  transition-all duration-200 hover:shadow-lg hover:shadow-Orange/20"
         >
           Iniciar Sesión
         </a>
