desactivate dashboard and profiles

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -20,7 +20,9 @@
         >
           Cursos
         </a>
-        <a 
+
+        <!-- Se pude activas esta fucnionalidad , pero son solo pruebas -->
+<!--         <a 
           href="/dashboard" 
           class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange"
         >
@@ -31,7 +33,7 @@
           class="px-4 py-2 text-sm font-medium text-White/90 hover:text-Orange"
         >
           Perfil
-        </a>
+        </a> -->
         <a 
           href="/login" 
           class="ml-4 px-4 py-2 text-sm font-medium text-White bg-Orange/90 hover:bg-Orange rounded-lg 
