--- a/src/pages/quiz/[slug].astro
+++ b/src/pages/quiz/[slug].astro
@@ -86,9 +86,11 @@ const questions = quiz.data.questions.slice(0, 60);
         <p class="text-White/90 text-lg">Tu puntuación:</p>
         <p id="score-display" class="text-4xl font-bold bg-gradient-to-r from-Orange to-Accent bg-clip-text text-transparent my-4">0/0</p>
         <p id="score-message" class="text-White/70"></p>
-        <a href="/dashboard" class="inline-block mt-6 px-6 py-2 bg-gradient-to-r from-Orange to-Accent text-White font-medium rounded-lg hover:from-Orange/90 hover:to-Accent/90 transition-all duration-300">
+
+        <!-- Se pude activar  -->
+        <!-- <a href="/dashboard" class="inline-block mt-6 px-6 py-2 bg-gradient-to-r from-Orange to-Accent text-White font-medium rounded-lg hover:from-Orange/90 hover:to-Accent/90 transition-all duration-300">
           Volver al Dashboard
-        </a>
+        </a> -->
       </div>
     </main>
 </BaseLayout>
