--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -35,8 +35,10 @@
         <ul class="mt-4 space-y-2">
           <li><a href="/" class="text-White/60 hover:text-Orange transition-colors">Inicio</a></li>
           <li><a href="/courses" class="text-White/60 hover:text-Orange transition-colors">Cursos</a></li>
-          <li><a href="/dashboard" class="text-White/60 hover:text-Orange transition-colors">Dashboard</a></li>
-          <li><a href="/profile" class="text-White/60 hover:text-Orange transition-colors">Perfil</a></li>
+
+          <!-- Se puded activar estos funcionalidades , pero son solo pruebas  -->
+<!--           <li><a href="/dashboard" class="text-White/60 hover:text-Orange transition-colors">Dashboard</a></li>
+          <li><a href="/profile" class="text-White/60 hover:text-Orange transition-colors">Perfil</a></li> -->
         </ul>
       </div>
 
@@ -65,7 +67,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
             </svg>
-            <span class="text-White/60">Bogotá, Colombia</span>
+            <span class="text-White/60">La Libertad, Peru</span>
           </li>
         </ul>
       </div>
