--- a/src/pages/courses/[slug].astro
+++ b/src/pages/courses/[slug].astro
@@ -29,7 +29,7 @@ const { Content } = await course.render();
                     <Content />
                 </div>
                 <div class="mt-8">
-                    <a href={course.data.enlace} class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition-colors">
+                    <a href={course.data.enlace} class="bg-Orange text-white px-6 py-3 rounded-lg font-semibold hover:bg-Orange/80 transition-colors">
                         Ir al Quiz
                     </a>
                 </div>
