--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import "../styles/global.css";
-import Header from "../layouts/Header.astro";
-import Footer from "../layouts/Footer.astro";
+import "@styles/global.css";
+import Header from "@layouts/Header.astro";
+import Footer from "@layouts/Footer.astro";
 
 interface Props {
   title: string;
