--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,16 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '@/layouts/BaseLayout.astro';
+
+const descripcion = `Quiz Master es una plataforma interactiva para aprender y desafiar tus conocimientos mediante quizzes y recursos educativos.
+                    Nuestro objetivo es ofrecer una experiencia divertida y educativa, con seguimiento de progreso y cursos especializados.`
 ---
-<BaseLayout title="Acerca de">
-  <main class="flex flex-col items-center justify-center min-h-screen bg-gray-50 py-12">
-    <h1 class="text-3xl font-bold mb-4">Acerca de Quiz Master</h1>
-    <p class="text-lg text-gray-600 mb-8 text-center max-w-xl">
+<BaseLayout title="Acerca de" description={descripcion}>
+  <main class="flex flex-col items-center justify-center min-h-screen py-12">
+    <h1 class="text-5xl sm:text-6xl font-bold mb-4">Acerca de Quiz Master</h1>
+    <p class="text-lg text-gray-300 mb-8 text-center max-w-xl">
       Quiz Master es una plataforma interactiva para aprender y desafiar tus conocimientos mediante quizzes y recursos educativos. 
       Nuestro objetivo es ofrecer una experiencia divertida y educativa, con seguimiento de progreso y cursos especializados.
     </p>
-    <a href="/" class="text-blue-600 hover:underline">← Volver al inicio</a>
+    <a href="/" class="text-Orange hover:underline">Volver al inicio</a>
   </main>
 </BaseLayout>
