--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import { isAuthenticated, user } from '../const/profile.const';
+import BaseLayout from '@/layouts/BaseLayout.astro';
+import { isAuthenticated, user } from '@/const/profile.const';
 ---
 
 <BaseLayout 
